# crewai-dossier

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: config.yaml  dev.yaml
docs/: implementation_blueprint.md  milestone_1.md  milestone_2.md  milestone_2_pipeline_stub.md  separate_pipeline_and_renderer.md  starter_folders_and_file_tree.md
src/dossier/agents/: editor.py  fact_checker.py  researcher.py
src/dossier/config/: loader.py
src/dossier/logging/: json_logger.py
src/dossier/models/: README.md
src/dossier/pipeline/: run.py
src/dossier/prompts/: editor_prompt.md  fact_checker_prompt.md  researcher_prompt.md
src/dossier/quality/: gates.py
src/dossier/tasks/: task_runner.py
src/dossier/tools/: ports.py
src/dossier/tools/impl/: cache_file.py  fetch_stub.py  search_stub.py
src/interfaces/cli/: cli.py
src/interfaces/web/: app.py
src/interfaces/web/api/: routes_placeholder.md
src/utils/: __init__.py  check_api_key.py  create_folder.py  create_timestamp.py  placeholder_brief.py
tests/: test_placeholder.md
