[project]
name = "crewai-dossier"
version = "0.1.0"
description = "Research Dossier Builder (CLI-first, future web app)"
authors = [{ name = "Dave" }]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.159.0",
    "python-dotenv>=1.1.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


